# otus_cpp

./: .clang-format  01__home__work_2README_8md.html  01__home__work_2description_8md.html  01__home__work_2main_8cpp.html  02__home__work_2README_8md.html  02__home__work_2description_8md.html  03__home__work_2README_8md.html  03__home__work_2description_8md.html  04__home__work_2README_8md.html  04__home__work_2description_8md.html  05__home__work_2README_8md.html  05__home__work_2description_8md.html  06__home__work_2README_8md.html  06__home__work_2description_8md.html  06__home__work_2main_8cpp.html  06__home__work_2main_8cpp__incl.map  06__home__work_2main_8cpp__incl.md5  07__home__work_2README_8md.html  07__home__work_2description_8md.html  08__home__work_2README_8md.html  08__home__work_2description_8md.html  08__home__work_2main_8cpp.html  08__home__work_2main_8cpp__incl.map  08__home__work_2main_8cpp__incl.md5  09__home__work_2README_8md.html  09__home__work_2description_8md.html  09__home__work_2main_8cpp.html  09__home__work_2main_8cpp__incl.map  09__home__work_2main_8cpp__incl.md5  10__home__work_2README_8md.html  10__home__work_2description_8md.html  10__home__work_2main_8cpp.html  10__home__work_2main_8cpp__incl.map  10__home__work_2main_8cpp__incl.md5  11__home__work_2README_8md.html  11__home__work_2description_8md.html  11__home__work_2main_8cpp.html  11__home__work_2main_8cpp__incl.map  11__home__work_2main_8cpp__incl.md5  12__home__work_2README_8md.html  (+462 more)
.github/workflows/: doxygen-gh-pages.yml  release.yml
01_home_work/: CMakeLists.txt  description.md  main.cpp
02_home_work/: CMakeLists.txt  description.md  ip_adress_pool.cpp  ip_adress_pool.h  ip_filter.cpp
03_home_work/: CMakeLists.txt  description.md  pool_allocator.h  run_allocator.cpp  simple_forward_list.h
04_home_work/: CMakeLists.txt  README.md  print_ip.cpp
05_home_work/: CMakeLists.txt  controller.cpp  controller.h  description.md  editor.cpp  model.cpp  model.h  view.h
06_home_work/: CMakeLists.txt  description.md  main.cpp  matrix.h
07_home_work/: CMakeLists.txt  README.md  bulk.cpp  command_block.cpp  command_block.h  command_processor.cpp  command_processor.h  loggers.cpp  loggers.h
08_home_work/: CMakeLists.txt  description.md  file_group.cpp  file_group.h  file_handler.cpp  file_handler.h  main.cpp
09_home_work/: CMakeLists.txt  async.cpp  async.h  async_bulk.cpp  async_bulk.h  async_loggers.cpp  async_loggers.h  description.md  main.cpp
10_home_work/: CMakeLists.txt  README.md  bulk_router.cpp  bulk_router.h  bulk_server.cpp  bulk_server.h  main.cpp
11_home_work/: CMakeLists.txt  README.md  database.cpp  database.h  database_command_processor.cpp  database_command_processor.h  description.md  join_server.cpp  join_server.h  main.cpp
12_home_work/: CMakeLists.txt  README.md
13_home_work/: CMakeLists.txt
docs/html/: annotated.html  classes.html  inherit_graph_1.map  inherit_graph_3.md5  ip__adress__pool_8cpp__incl.md5  ip__adress__pool_8h__incl.md5  ip__filter_8cpp__incl.md5  md_README.html  menudata.js  pool__allocator_8h__incl.md5  run__allocator_8cpp.html  simple__forward__list_8h__dep__incl.md5  simple__forward__list_8h__incl.md5  simple__forward__list_8h_source.html  structis__tuple__impl_3_01std_1_1tuple_3_01U_8_8_8_01_4_01_4__coll__graph.map
docs/html/search/: all_9.js  typedefs_0.js
html/: README_8md.html  classIPAdressPool-members.html  classIPAdressPool.html  classpool__allocator.html  classsimple__forward__list-members.html  classsimple__forward__list.html  dir_247758d133683e260d449aa4d2bdea51.html  dir_7d0bb39c580897a4241b09a9cd8b3574.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_4.md5  inherits.html  ip__adress__pool_8cpp.html  ip__adress__pool_8h.html  ip__adress__pool_8h__dep__incl.map  ip__adress__pool_8h_source.html  ip__filter_8cpp__incl.map  lib_8cpp.html  lib_8cpp__incl.map  lib_8cpp__incl.md5  lib_8h.html  lib_8h__dep__incl.map  lib_8h__dep__incl.md5  lib_8h_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  pages.html  pool__allocator_8h.html  pool__allocator_8h_source.html  print__ip_8cpp.html  (+19 more)
html/search/: all_0.js  all_1.js  all_2.js  all_7.js  all_8.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_1.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+78 more)
tests/: CMakeLists.txt  test_allocator.cpp  test_bayan.cpp  test_bulk.cpp  test_data.h.in  test_database_command_processor.cpp  test_ip_adress.cpp  test_matrix.cpp  test_version.cpp
tests/bayan_test_cases/2/: file3
tests/bayan_test_cases/3/: file4  file6
tests/bayan_test_cases/4/: file7  file8
